--- a/meta/main.yml
+++ b/meta/main.yml
@@ -212,7 +212,10 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of
     # alphanumeric characters. Maximum 20 tags per role.
 
-dependencies: []
-  # List your role dependencies here, one per line.
-  # Be sure to remove the '[]' above if you add dependencies
-  # to this list.
+dependencies:
+  - role: amtega.packages
+    packages_python:
+      all:
+        all:
+          - name: pyvmomi
+            state: present
