--- a/tasks/vms.yml
+++ b/tasks/vms.yml
@@ -2,8 +2,7 @@
 # Setup vmware vms
 
 - block:
-    - name: gather vmware virtual machines facts
-      include_tasks: vms_facts.yml
+    - include_tasks: vms_facts.yml
 
     - include_tasks: "{{ vmware_provisioner_vms_provisioning_include }}"
       vars:
