--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,9 @@
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms
+
+- name: setup vmware virtual machines attributes
+  include_tasks: vms_attrs.yml
+  tags:
+    - role::vmware_provisioner
+    - role::vmware_provisioner::vms::attributes
