--- a/tasks/vms_sequential.yml
+++ b/tasks/vms_sequential.yml
@@ -120,58 +120,10 @@
           {{ vm.wait_for_ip_address
              | default(vmware_provisioner_vm_wait_for_ip_address) }}
       register: vmware_provisioner_vms_setup_result
-      loop: >-
-        {{ vmware_provisioner_vms
-           + (vmware_provisioner_manage_inventory_vms)
-             | ternary(vmware_provisioner_inventory_vms | default([]), []) }}
+      loop: "{{ vmware_vms_to_manage }}"
       loop_control:
         loop_var: vm
         label: "{{ vm.name }}"
-
-    - name: sequential vmware virtual machines attributes setup
-      # vmware_guest_custom_attributes:
-      #   attributes:
-      #     - name: "{{ vm.1.name }}"
-      #       value: "{{ vm.1.value }}"
-      #   datacenter: >-
-      #     {{ vm.0.datacenter
-      #        | default(vmware_provisioner_vm_datacenter)
-      #        | default(omit, boolean=true) }}
-      #   folder: >-
-      #     {{ vm.0.folder
-      #        | default(vmware_provisioner_vm_folder)
-      #        | default(omit, boolean=true)  }}
-      #   hostname: >-
-      #     {{ vmware_provisioner_hostname }}
-      #   name: >-
-      #     {{ vm.0.name
-      #        | default(vmware_provisioner_vm_name)
-      #        | default(omit, boolean=true) }}
-      #   password: >-
-      #     {{ vmware_provisioner_password }}
-      #   port: >-
-      #     {{ vmware_provisioner_port | default(omit) }}
-      #   state: "{{ vm.1.state }}"
-      #   username: >-
-      #     {{ vmware_provisioner_username }}
-      #   uuid: >-
-      #     {{ vm.0.uuid
-      #        | default(vmware_provisioner_vm_uuid)
-      #        | default(omit, boolean=true) }}
-      #   validate_certs: >-
-      #     {{ vmware_provisioner_validate_certs | default(omit) }}
-      # register: vmware_provisioner_vms_setup_attributes_result
-      debug: var=vm
-      loop: >-
-        {{ vmware_provisioner_vms
-           + (vmware_provisioner_manage_inventory_vms)
-             | ternary(vmware_provisioner_inventory_vms | default([]), [])
-           | rejectattr("state", "equalto", "absent")
-           | list
-           | subelements("attributes") }}
-      loop_control:
-        loop_var: vm
-        # label: "{{ vm.0.name }} {{ vm.1.name }}"
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms
