--- a/tasks/vms_sequential.yml
+++ b/tasks/vms_sequential.yml
@@ -123,7 +123,11 @@
       loop: "{{ vmware_vms_to_manage }}"
       loop_control:
         loop_var: vm
-        label: "{{ vm.name }}"
+        label: >-
+          {{ vm.name }}
+          {{ vm.state
+             | default(vmware_provisioner_vm_state)
+             | default(omit, boolean=true) }}
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms
