--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 # Role tasks
 
-- name: setup vmware virtual machines
+- name: Setup vmware virtual machines
   include_tasks: vms.yml
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms
 
-- name: setup vmware virtual machines attributes
+- name: Setup vmware virtual machines attributes
   include_tasks: vms_attrs.yml
   tags:
     - role::vmware_provisioner
