--- a/tests/main.yml
+++ b/tests/main.yml
@@ -1,7 +1,7 @@
 ---
 # Tasks for testing role
 
-- name: prepare testing environment
+- name: Prepare testing environment
   hosts: "{{ vmware_provisioner_tests_host }}"
   tasks:
     - name: setup vmware_provisioner role config
@@ -31,14 +31,14 @@
   vars:
     vms_prefix: vmware_provisioner_testing_vm
 
-- name: test vmware_provisioner role provisioning
+- name: Test vmware_provisioner role provisioning
   hosts: "{{ vmware_provisioner_tests_host }}"
   roles:
     - role: amtega.vmware_provisioner
       vmware_provisioner_vm_state: present
       vmware_provisioner_vms: "{{ vmware_provisioner_testing_vms }}"
 
-- name: cleanup testing vms
+- name: Cleanup testing vms
   hosts: "{{ vmware_provisioner_tests_host }}"
   roles:
     - role: amtega.vmware_provisioner
