--- a/tasks/vms.yml
+++ b/tasks/vms.yml
@@ -2,14 +2,14 @@
 # Setup vmware vms
 
 - block:
-    - include_tasks: vms_facts.yml
+    - include_tasks: vms_fact.yml
       when: >-
         (vmware_provisioner_gather_inventory_vm_configs
          and (vmware_provisioner_inventory_vms is not defined
               or vmware_provisioner_gather_inventory_vm_configs_force))
-        or (vmware_provisioner_gather_detailed_vm_facts
-            and (vmware_provisioner_vms_detailed_facts is not defined
-                 or vmware_provisioner_gather_vm_facts_force))
+        or (vmware_provisioner_gather_detailed_vm_fact
+            and (vmware_provisioner_vms_detailed_fact is not defined
+                 or vmware_provisioner_gather_vm_fact_force))
 
     - include_tasks: "vms_{{ vmware_provisioner_vms_provisioning_method }}.yml"
       when:
