--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -92,21 +92,21 @@ vmware_provisioner_vm_uuid:
 vmware_provisioner_vm_vapp_properties: []
 vmware_provisioner_vm_wait_for_ip_address: no
 
-# Gather all basic virtual machine facts from vCenter or ESXi
+# Gather all basic virtual machine fact from vCenter or ESXi
 
-vmware_provisioner_gather_basic_vm_facts: no
+vmware_provisioner_gather_basic_vm_fact: no
 
-# Gather detailed virtual machine facts from vCenter or ESXi for the machines
+# Gather detailed virtual machine fact from vCenter or ESXi for the machines
 # listed in `vmware_provisioner_vms` variable that already exists. This take
 # more time
 
-vmware_provisioner_gather_detailed_vm_facts: no
+vmware_provisioner_gather_detailed_vm_fact: no
 
 # If the the value of the previous variable is yes, the role does not gather
-# vCenter or ESXi vm facts if this info is already in the play, but with the
+# vCenter or ESXi vm fact if this info is already in the play, but with the
 # foollowing variable it is possible to force it
 
-vmware_provisioner_gather_vm_facts_force: no
+vmware_provisioner_gather_vm_fact_force: no
 
 # Setup fact with will a list of virtual machines configs defined in the
 # inventory from any host present in the ansible `hostvars` variable that
@@ -129,3 +129,7 @@ vmware_provisioner_manage_inventory_vms: no
 # want to gather facts
 
 vmware_provisioner_provisione: yes
+
+# Hide sensitive information
+
+vmware_provisioner_no_log: yes
