--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,35 +7,40 @@
   tags:
     - role::vmware_provisioner
 
-- name: Patch ansible vmware modules
-  include_tasks: patch.yml
+- include_tasks: patch.yml
   when: vmware_provisioner_patch_ansible_modules
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::patch
 
-- name: Gather vmware clusters facts
-  include_tasks: clusters_facts.yml
-  when: vmware_provisioner_clusters_facts is not defined
+- include_tasks: session.yml
+  tags:
+    - role::vmware_provisioner
+
+- include_tasks: datacenters_fact.yml
+  when: vmware_provisioner_datacenters_fact is not defined
+  tags:
+    - role::vmware_provisioner
+    - role::vmware_provisioner::datacenters
+
+- include_tasks: clusters_fact.yml
+  when: vmware_provisioner_clusters_fact is not defined
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::clusters
 
-- name: Gather vmware datastores facts
-  include_tasks: datastores_facts.yml
-  when: vmware_provisioner_datastores_facts_result is not defined
+- include_tasks: datastores_fact.yml
+  when: vmware_provisioner_datastores_fact is not defined
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::datastores
 
-- name: Setup vmware virtual machines
-  include_tasks: vms.yml
+- include_tasks: vms.yml
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms
 
-- name: Setup vmware virtual machines attributes
-  include_tasks: vms_attrs.yml
+- include_tasks: vms_attrs.yml
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms::attributes
