--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,12 +7,6 @@
   tags:
     - role::vmware_provisioner
 
-- include_tasks: patch.yml
-  when: vmware_provisioner_patch_ansible_modules
-  tags:
-    - role::vmware_provisioner
-    - role::vmware_provisioner::patch
-
 - include_tasks: session.yml
   tags:
     - role::vmware_provisioner
@@ -43,4 +37,5 @@
 - include_tasks: vms_attrs.yml
   tags:
     - role::vmware_provisioner
+    - role::vmware_provisioner::vms
     - role::vmware_provisioner::vms::attributes
